--- a/QTMAProject/ios/QTMAProject.xcodeproj/xcshareddata/xcschemes/QTMAProject.xcscheme
+++ b/QTMAProject/ios/QTMAProject.xcodeproj/xcshareddata/xcschemes/QTMAProject.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "QTMAProject.app"
-               BlueprintName = "QTMAProject"
-               ReferencedContainer = "container:QTMAProject.xcodeproj">
+               BuildableName = "qtmaproject.app"
+               BlueprintName = "qtmaproject"
+               ReferencedContainer = "container:qtmaproject.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "QTMAProjectTests.xctest"
-               BlueprintName = "QTMAProjectTests"
-               ReferencedContainer = "container:QTMAProject.xcodeproj">
+               BuildableName = "qtmaprojectTests.xctest"
+               BlueprintName = "qtmaprojectTests"
+               ReferencedContainer = "container:qtmaproject.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "QTMAProject.app"
-            BlueprintName = "QTMAProject"
-            ReferencedContainer = "container:QTMAProject.xcodeproj">
+            BuildableName = "qtmaproject.app"
+            BlueprintName = "qtmaproject"
+            ReferencedContainer = "container:qtmaproject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "QTMAProject.app"
-            BlueprintName = "QTMAProject"
-            ReferencedContainer = "container:QTMAProject.xcodeproj">
+            BuildableName = "qtmaproject.app"
+            BlueprintName = "qtmaproject"
+            ReferencedContainer = "container:qtmaproject.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
