--- a/QTMAProject/android/settings.gradle
+++ b/QTMAProject/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'QTMAProject'
+rootProject.name = 'qtmaproject'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
