--- a/QTMAProject/package.json
+++ b/QTMAProject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QTMAProject",
+  "name": "qtmaproject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,17 +10,40 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mdi/font": "^5.3.45",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-firebase/app": "^6.4.0",
+    "@react-native-firebase/auth": "^6.4.0",
+    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/core": "^5.3.3",
+    "@react-navigation/drawer": "^5.4.1",
+    "@react-navigation/material-bottom-tabs": "^5.1.8",
+    "@react-navigation/material-top-tabs": "^5.1.8",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
+    "formik": "^2.1.4",
+    "hooks": "^0.3.2",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-tab-view": "^2.14.0",
+    "react-native-vector-icons": "^7.0.0",
+    "react-navigation": "^4.3.8",
+    "watchman": "^1.0.0",
+    "yup": "^0.28.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "@babel/core": "^7.11.5",
+    "@babel/runtime": "^7.11.2",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.8.0",
+    "jest": "^26.4.2",
+    "metro-react-native-babel-preset": "^0.63.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
