--- a/QTMAProject/package.json
+++ b/QTMAProject/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^5.2.10",
     "formik": "^2.1.4",
     "hooks": "^0.3.2",
+    "expo": "38.0.10",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.6.1",
