Added busy time graphs to modal

--- a/QTMAProject/package.json
+++ b/QTMAProject/package.json
@@ -21,9 +21,9 @@
     "@react-navigation/material-top-tabs": "^5.1.8",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "expo": "38.0.10",
     "formik": "^2.1.4",
     "hooks": "^0.3.2",
-    "expo": "38.0.10",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -31,6 +31,8 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.3.8",
