--- a/QTMAProject/package.json
+++ b/QTMAProject/package.json
@@ -30,6 +30,8 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.3.8",
