Slight changes to restaurant data

--- a/QTMAProject/ios/QTMAProject/Info.plist
+++ b/QTMAProject/ios/QTMAProject/Info.plist
@@ -59,6 +59,7 @@
 	<string>Ionicons.ttf</string>
 	<string>MaterialIcons.ttf</string>
 	<string>MaterialCommunityIcons.ttf</string>
+	<string>Roboto.ttf</string>
 	<string>SimpleLineIcons.ttf</string>
 	<string>Octicons.ttf</string>
 	<string>Zocial.ttf</string>
