--- a/QTMAProject/package.json
+++ b/QTMAProject/package.json
@@ -26,6 +26,7 @@
     "hooks": "^0.3.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-color-matrix-image-filters": "^5.2.10",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^3.10.1",
